Release/0.9.12 (#17)
* fix a data race bug in ard parser
* frontend: show information about (possibly) deprecated program entries, npm update, add switch toggle to hide deprecated items, enrich tv program item modal, add state service
* go mod tidy, extend api with new fields 'is_deprecated' and 'collision_entries', update openApi spec files, re-build frontend for rice box
* frontend: set proper version and add missing license headers
* general go module upgrade, fix ard date time offset problem, fix srf parsing bug, improve recommendation quality
* frontend: add new "universal" date pipe with moment.js, first time picker prototype added, fixing several locale issues
* frontend: improve api service, angular and dep update, fix observable subscription handling on multiple places, add custom date pipe.
* frontend: Add datepicker (via flatpickr dep) for timeline in UI and improve menu button bar. Timeline fully works and handles/displays date properly, except in Firefox. Add subgroup feature of backend overlap information.
* api: extend LogResponse object and update spec
* fix ard program entry description handling and refactor date range generation method name
* frontend: chrome works, firefox doesn't handle the dates correctly
* add overlap program entry logic and append it to the fetch process while respecting excluded channels. Unique worker pool idle timeout setting is used, unified handling of excluded channel ids. Fix recommendations endpoint and returning currently streamed program items now, too.
* frontend: optimizations, angular and vis-timeline update, fix overlap subgroup mapping in timeline component, update to most recent version of npm lockfile
* change profiling mechanism to http server, multiple changes to overlap algorithm, fix sql fk error in clear all, update changelog
* small fixes to overlap logic
